# pytagimg

./: README.md  README.rst  pyproject.toml  requirements.thawed.txt  requirements.txt  setup.py
config/: project.py  python.py  version.py
pytagimg/: configs.py  main.py  static.py
pytagimg/endpoints/: group_default.py  main.py
src/pytagimg/: configs.py  main.py  static.py
